# flaha

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  opencode.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
agents/: advisory.agent.md  diaspora.agent.md  finance.agent.md  gov-support.agent.md  logistics.agent.md  marketing.agent.md  marketplace.agent.md
deploy/: Dockerfile  docker-compose.yml
docs/: architecture.md  business-model.md  competitive-analysis.md  expansion-strategy.md  roadmap.md
frontend/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  StatCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/navigation/: AppNavigator.tsx
frontend/src/screens/: AdvisoryScreen.tsx  CreateProductScreen.tsx  EditProfileScreen.tsx  GovSupportScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  MarketplaceScreen.tsx  ProductDetailScreen.tsx  (+4 more)
integrations/: badr-bank.api.md  baridi_mob_client.py  facebook-ads.api.md  madr-ministere.api.md  yalidine.api.md  yalidine_client.py
knowledge/: algerian-crops.md  darja-phrases.md  gov-subsidies.md  prices-history.md
scripts/: start-flaha.ps1
skills/flaha-agent/: SKILL.md
src/: __init__.py
src/backend/: config.py  main.py  schemas.py
src/database/: connection.py  models.py
src/tests/: conftest.py  test_api.py
tools/: image-analyzer.mcp.md  maps-location.mcp.md  mcp_server.py  payment-baridi.mcp.md  ussd-gateway.mcp.md  weather-api.mcp.md  whatsapp-messenger.mcp.md
(+34 files in other folders)
